WIP: fixing coronal projection volume alignment

--- a/css/main.css
+++ b/css/main.css
@@ -454,6 +454,8 @@ body.waiting * {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
